; ModuleID = '/home/carl/AnghaBench/vlc/doc/libvlc/extr_vlc-thumb.c_set_position.c'
source_filename = "/home/carl/AnghaBench/vlc/doc/libvlc/extr_vlc-thumb.c_set_position.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@libvlc_MediaPlayerPositionChanged = common dso_local global i32 0, align 4
@callback = common dso_local global i32 0, align 4
@done = common dso_local global i32 0, align 4
@VLC_THUMBNAIL_POSITION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Couldn't set position\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @set_position to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_position(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32* @libvlc_media_player_event_manager(i32* %4)
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @assert(i32* %6)
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @libvlc_MediaPlayerPositionChanged, align 4
  %10 = load i32, i32* @callback, align 4
  %11 = call i32 @libvlc_event_attach(i32* %8, i32 %9, i32 %10, i32* null)
  store i32 0, i32* @done, align 4
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* @VLC_THUMBNAIL_POSITION, align 4
  %14 = call i32 @libvlc_media_player_set_position(i32* %12, i32 %13)
  %15 = call i32 @event_wait(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* @libvlc_MediaPlayerPositionChanged, align 4
  %18 = load i32, i32* @callback, align 4
  %19 = call i32 @libvlc_event_detach(i32* %16, i32 %17, i32 %18, i32* null)
  ret void
}

declare dso_local i32* @libvlc_media_player_event_manager(i32*) #1

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @libvlc_event_attach(i32*, i32, i32, i32*) #1

declare dso_local i32 @libvlc_media_player_set_position(i32*, i32) #1

declare dso_local i32 @event_wait(i8*) #1

declare dso_local i32 @libvlc_event_detach(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
